Refactor PDF processing application to enhance order data extraction.
Updated file handling and cleanup logic, improved error handling, and modified UI elements for clarity.

Removed unused BOL processing script and adjusted configuration for output file naming.

Updated HTML templates to reflect new functionality and improved user experience.

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: BOL-Extractor-Flask-App-Server
+    name: PDF-Processors
     env: python
     buildCommand: apt-get update -y && apt-get install -y poppler-utils && pip install -r requirements.txt
     startCommand: gunicorn app:app --workers=2 --timeout=120
